# pages-demo

./: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  search.html
.doctrees/: environment.pickle  index.doctree
.github/: docs.yml
.github/workflows/: docs.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
docs/: conf.py  index.rst
