[tool.poetry]
name = "pages-demo"
version = "0.1.0"
description = ""
authors = ["Harry Stuart <harry.stuart@dabble.com.au>"]
readme = "README.md"
packages = [{include = "pages_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
